[tool.poetry]
name = "get_cert"
version = "19.1.0"
description = "Tool for downloading ssl certificates from remote servers."
authors = ["Michal Mazurek <michal@mazurek-inc.co.uk>"]
license = "MIT"
packages = [ {include = "get_cert.py"}]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
